math and search result areas

--- a/src/main/resources/assets/codex/lang/en_us.json
+++ b/src/main/resources/assets/codex/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "key.codex.search": "Search..."
+  "key.codex.search": "Search...",
+  "codex.description.default": "No description available..."
 }
