Parchment Mappings + Results displayed number

--- a/src/main/resources/assets/quicksearch/lang/en_us.json
+++ b/src/main/resources/assets/quicksearch/lang/en_us.json
@@ -4,5 +4,6 @@
   "text.config.quicksearch.title": "QuickSearch Settings",
   "text.config.quicksearch.option.maxSearchResults": "Number of results to store",
   "text.config.quicksearch.option.requiredSearchScore": "Threshold score for search results",
-  "text.config.quicksearch.option.requiredLetters": "Minimum letters to start searching"
+  "text.config.quicksearch.option.requiredLetters": "Minimum letters to start searching",
+  "text.config.quicksearch.option.displayedResults": "Number of results to display",
 }
